change title to working with the parser

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scriptSig and scriptPubKey\n",
+    "# Working with the Parser\n",
     "\n",
     "Every node, when receiving transactions makes sure that the transaction adheres to the network rules. This process is called _transaction validation_. Here are the main things that a node needs to check for:\n",
     "\n",
