--- a/solution.ipynb
+++ b/solution.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# scriptSig and scriptPubKey\n",
+    "# Working with the Parser\n",
     "\n",
     "Every node, when receiving transactions makes sure that the transaction adheres to the network rules. This process is called _transaction validation_. Here are the main things that a node needs to check for:\n",
     "\n",
@@ -40,8 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 8.1/8.2/8.3\n",
-    "\n",
     "from io import BytesIO\n",
     "from tx import Tx\n",
     "\n",
