--- a/solution.ipynb
+++ b/solution.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with the Parser\n",
-    "\n",
-    "Every node, when receiving transactions makes sure that the transaction adheres to the network rules. This process is called _transaction validation_. Here are the main things that a node needs to check for:\n",
-    "\n",
-    "* Inputs of the transaction are previously unspent\n",
-    "* Sum of the inputs > sum of the outputs\n",
-    "* scriptSig actually unlocks the previous scriptPubKey\n",
-    "\n",
-    "The first aspect prevents double-spending. Any input that's already been spent cannot be spent again.\n",
-    "\n",
-    "The second aspect makes sure no new Bitcoins are created (except in a special transaction called the coinbase transaction. More on that in Chapter X).\n",
-    "\n",
-    "The third aspect makes sure that the smart contract resolves to True. In the vast majority of transactions, this means checking that the one or more signatures in the scriptSig are valid."
+    "# Working with the Parser"
    ]
   },
   {
